src/objects/CommComentDef__mdt.object
<CustomObject>
    <description>請求書コメント、特記事項、請求書口座情報を入力用定型文の定義（表示ラベル昇順で表示）</description>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>デフォルト</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedMessage__c</fullName>
        <inlineHelpText>種別が「口座情報」の場合、定型文は「1行35文字、7行以内」を定義してください</inlineHelpText>
        <label>定型文</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecTypeLst__c</fullName>
        <label>種別</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>請求書</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>特記事項</label>
                </value>
                <value>
                    <fullName>口座情報</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <label>店舗コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>定型文</label>
</CustomObject>